--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch": "tsc -w",
     "build": "tsc",
-    "test": "mocha -r ts-node/register test/**.ts",
+    "test-unit": "mocha -r ts-node/register test/unit/**.ts",
+    "test-browser": "node_modules/karma/bin/karma start karma.conf.js",
     "postinstall": "scripts/install.js",
     "uninstall": "scripts/uninstall.js"
   },
@@ -22,12 +23,19 @@
   "homepage": "https://github.com/wei3hua2/snet-webclient#readme",
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^10.5.2",
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
     "@types/mocha": "^5.2.0",
+    "@types/node": "^10.5.2",
+    "babel-loader": "^8.0.5",
+    "jasmine-core": "^3.3.0",
+    "karma": "^4.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-webpack": "^3.0.5",
     "mocha": "^5.2.0",
     "ts-node": "^6.0.5",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "webpack": "^4.29.3"
   }
 }
