--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "watch": "webpack --watch --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
     "clean": "rm -rf build dist",
+    "doc": "typedoc",
     "test-unit": "mocha -r ts-node/register test/unit/**.ts",
     "test-node": "mocha -r ts-node/register test/node/**.ts --timeout 15000",
     "test-browser": "node_modules/karma/bin/karma start karma.conf.js",
@@ -30,7 +31,8 @@
     "grpc-web-client": "^0.6.3",
     "protobufjs": "^6.8.8",
     "singularitynet-platform-contracts": "^0.2.6",
-    "singularitynet-token-contracts": "^2.0.1"
+    "singularitynet-token-contracts": "^2.0.1",
+    "web3-core-promievent": "^1.0.0-beta.46"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
@@ -48,6 +50,7 @@
     "mocha": "^5.2.0",
     "ts-loader": "^5.3.3",
     "ts-node": "^6.0.5",
+    "typedoc": "^0.14.2",
     "typescript": "^2.8.3",
     "web3": "1.0.0-beta.37",
     "webpack": "^4.29.3",
