--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "webpack --watch --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
     "clean": "rm -rf build dist",
-    "doc": "typedoc",
+    "doc-md": "cp markdown-tmpl/partials/index.hbs node_modules/typedoc-plugin-markdown/dist/theme/partials/index.hbs && typedoc --options ./typedoc.json",
     "test-unit": "mocha -r ts-node/register test/unit/**.ts",
     "test-node": "mocha -r ts-node/register test/node/**.ts --timeout 15000",
     "test-browser": "node_modules/karma/bin/karma start karma.conf.js",
@@ -51,6 +51,8 @@
     "ts-loader": "^5.3.3",
     "ts-node": "^6.0.5",
     "typedoc": "^0.14.2",
+    "typedoc-plugin-external-module-name": "^2.0.0",
+    "typedoc-plugin-markdown": "^1.1.26",
     "typescript": "^2.8.3",
     "web3": "1.0.0-beta.37",
     "webpack": "^4.29.3",
