--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "typedoc-plugin-external-module-name": "^2.0.0",
     "typedoc-plugin-markdown": "^1.1.26",
     "typescript": "^2.8.3",
-    "web3": "1.0.0-beta.37",
+    "web3": "^1.0.0-beta.46",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   }
