--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
   },
   "homepage": "https://github.com/wei3hua2/snet-webclient#readme",
   "dependencies": {
+    "atob": "^2.1.2",
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
     "grpc-web-client": "^0.6.3",
     "protobufjs": "^6.8.8",
     "singularitynet-platform-contracts": "^0.2.6",
     "singularitynet-token-contracts": "^2.0.1",
-    "web3-core-promievent": "^1.0.0-beta.46"
+    "web3-core-promievent": "^1.0.0-beta.30"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
@@ -55,7 +56,7 @@
     "typedoc-plugin-external-module-name": "^2.0.0",
     "typedoc-plugin-markdown": "^1.1.26",
     "typescript": "^2.8.3",
-    "web3": "^1.0.0-beta.46",
+    "web3": "^1.0.0-beta.30",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   }
