--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.18.0",
     "eventemitter3": "^3.1.0",
     "grpc-web-client": "^0.6.3",
+    "js-base64": "^2.5.1",
     "protobufjs": "^6.8.8",
     "singularitynet-platform-contracts": "^0.2.6",
     "singularitynet-token-contracts": "^2.0.1",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/js-base64": "^2.3.1",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.5.2",
     "babel-loader": "^8.0.5",
