--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/wei3hua2/snet-webclient#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "bluebird": "^3.5.3",
     "eventemitter3": "^3.1.0",
     "grpc-web-client": "^0.6.3",
     "js-base64": "^2.5.1",
