--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
+    "buffer": "^5.2.1",
     "eventemitter3": "^3.1.0",
     "grpc-web-client": "^0.6.3",
     "js-base64": "^2.5.1",
