--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^10.5.2",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
+    "execution-time": "^1.3.0",
     "jasmine-core": "^3.3.0",
     "karma": "^4.0.0",
     "karma-chrome-launcher": "^2.2.0",
