--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/singularity.min.js",
   "scripts": {
     "build": "npm run clean & tsc",
-    "clean": "rm -rf build dist",
-    "test-node": "mocha -r ts-node/register test/node/**.ts --timeout 15000",
+    "clean": "rm -rf dist",
+    "test": "npm run build && mocha test/js/**.js --timeout 15000",
+    "test-node": "TS_NODE_PROJECT='tsconfig.testing.json' mocha -r ts-node/register test/node/**.ts --timeout 15000",
     "postinstall": "scripts/install.js",
     "uninstall": "scripts/uninstall.js"
   },
@@ -38,6 +39,7 @@
     "@types/js-base64": "^2.3.1",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.5.2",
+    "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "execution-time": "^1.3.0",
     "jasmine-core": "^3.3.0",
