--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Javascript library for singularitynet",
   "main": "dist/singularity.min.js",
   "scripts": {
-    "build": "npm run clean & tsc",
     "clean": "rm -rf dist",
-    "test": "npm run build && mocha test/js/**.js --timeout 15000",
-    "test-node": "TS_NODE_PROJECT='tsconfig.testing.json' mocha -r ts-node/register test/node/**.ts --timeout 15000",
+    "build": "npm run clean & tsc",
+    "watch": "tsc -w",
+    "test": "npm run build && mocha test/nodejs/**.js --timeout 15000",
     "postinstall": "scripts/install.js",
     "uninstall": "scripts/uninstall.js"
   },
@@ -34,19 +34,8 @@
     "web3-core-promievent": "^1.0.0-beta.46"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.4",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/js-base64": "^2.3.1",
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^10.5.2",
-    "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
-    "execution-time": "^1.3.0",
-    "jasmine-core": "^3.3.0",
-    "karma-webpack": "^3.0.5",
     "mocha": "^5.2.0",
-    "ts-loader": "^5.3.3",
-    "ts-node": "^6.0.5",
     "typescript": "^2.8.3",
     "web3": "^1.0.0-beta.46"
   }
