change branch to default master

--- a/dockers/basic/Dockerfile
+++ b/dockers/basic/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:latest
 
 WORKDIR /app
-RUN git clone --branch build-for-deliverable https://github.com/wei3hua2/singularity-js.git
+RUN git clone https://github.com/wei3hua2/singularity-js.git
 
 WORKDIR /app/singularity-js
 RUN npm install
